--- a/SpiceMarket Web/SpiceMarket Web.csproj
+++ b/SpiceMarket Web/SpiceMarket Web.csproj
@@ -11,8 +11,8 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>SpiceMarket_Web</RootNamespace>
-    <AssemblyName>SpiceMarket Web</AssemblyName>
+    <RootNamespace>SpiceMarket.Web</RootNamespace>
+    <AssemblyName>SpiceMarket.Web</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
@@ -109,6 +109,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="Content\Images\cardamom.png" />
     <Content Include="Content\Images\cart.png" />
     <Content Include="Content\Images\curcuma.png" />
