--- a/SpiceMarket_Web.Presentation/Views/web.config
+++ b/SpiceMarket_Web.Presentation/Views/web.config
@@ -17,6 +17,7 @@
 				<add namespace="SpiceMarket_Web.Domain.Models" />
 				<add namespace="SpiceMarket_Web.BusinessLogic.Interfaces" />
 				<add namespace="SpiceMarket_Web.BusinessLogic.Services" />
+				<add namespace="SpiceMarket_Web.Presentation.Filters" />
 			</namespaces>
 		</pages>
 	</system.web.webPages.razor>
