--- a/SpiceMarket_Web.Presentation/SpiceMarket_Web.Presentation.csproj
+++ b/SpiceMarket_Web.Presentation/SpiceMarket_Web.Presentation.csproj
@@ -134,6 +134,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\WishlistController.cs" />
     <Compile Include="Filters\AdminModAttribute.cs" />
     <Compile Include="Filters\UserModAttribute.cs" />
     <Compile Include="Global.asax.cs">
@@ -158,6 +159,7 @@
     <Content Include="Views\Admin\Products.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Views\Admin\Reports.cshtml" />
+    <Content Include="Views\Wishlist\Lista.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -167,6 +169,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\User\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SpiceMarket_Web.BusinessLogic\SpiceMarket_Web.BusinessLogic.csproj">
