--- a/SpiceMarket_Web.Presentation/SpiceMarket_Web.Presentation.csproj
+++ b/SpiceMarket_Web.Presentation/SpiceMarket_Web.Presentation.csproj
@@ -127,12 +127,12 @@
     <Content Include="Content\Images\turmeric.png" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Home\script.js" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
-    <Compile Include="Controllers\ContController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\WishlistController.cs" />
     <Compile Include="Filters\AdminModAttribute.cs" />
@@ -153,13 +153,13 @@
     <Content Include="Views\Home\Cos.cshtml" />
     <Content Include="Views\Home\Inregistrare.cshtml" />
     <Content Include="Views\Home\Achizitii.cshtml" />
+    <Content Include="Views\Home\Profil.cshtml" />
     <Content Include="Views\Home\Setari.cshtml" />
     <Content Include="Views\Admin\Dashboard.cshtml" />
     <Content Include="Views\Admin\Products.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Views\Admin\Reports.cshtml" />
     <Content Include="Views\Wishlist\Lista.cshtml" />
-    <Content Include="Views\Cont\Profil.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
