--- a/SpiceMarket_Web.Presentation/Web.config
+++ b/SpiceMarket_Web.Presentation/Web.config
@@ -1,89 +1,76 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<configSections>
-		<sectionGroup name="system.web.webPages.razor"
-					  type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
-			<section name="host"
-					 type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
-					 requirePermission="false" />
-			<section name="pages"
-					 type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
-					 requirePermission="false" />
-		</sectionGroup>
+  <configSections>
+    <sectionGroup name="system.web.webPages.razor"
+                  type="System.Web.WebPages.Razor.Configuration.RazorWebSectionGroup, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35">
+      <section name="host"
+               type="System.Web.WebPages.Razor.Configuration.HostSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+               requirePermission="false" />
+      <section name="pages"
+               type="System.Web.WebPages.Razor.Configuration.RazorPagesSection, System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"
+               requirePermission="false" />
+    </sectionGroup>
 
-		<!-- Entity Framework section -->
-		<section name="entityFramework"
-				 type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-				 requirePermission="false" />
-	</configSections>
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
+  </configSections>
 
-	<!-- Razor view engine settings -->
-	<system.web.webPages.razor>
-		<host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-		<pages pageBaseType="System.Web.Mvc.WebViewPage">
-			<namespaces>
-				<add namespace="System.Web.Mvc" />
-				<add namespace="System.Web.Mvc.Ajax" />
-				<add namespace="System.Web.Mvc.Html" />
-				<add namespace="System.Web.Routing" />
-				<add namespace="SpiceMarket_Web.Domain.Models" />
-				<add namespace="SpiceMarket_Web.BusinessLogic.Interfaces" />
-				<add namespace="SpiceMarket_Web.BusinessLogic.Services" />
-			</namespaces>
-		</pages>
-	</system.web.webPages.razor>
+  <system.web.webPages.razor>
+    <host factoryType="System.Web.Mvc.MvcWebRazorHostFactory, System.Web.Mvc, Version=5.2.9.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+    <pages pageBaseType="System.Web.Mvc.WebViewPage">
+      <namespaces>
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="SpiceMarket_Web.Domain.Models" />
+        <add namespace="SpiceMarket_Web.BusinessLogic.Interfaces" />
+        <add namespace="SpiceMarket_Web.BusinessLogic.Services" />
+      </namespaces>
+    </pages>
+  </system.web.webPages.razor>
 
-	<appSettings>
-		<add key="webpages:Enabled" value="false" />
-	</appSettings>
+  <appSettings>
+    <add key="webpages:Enabled" value="false" />
+  </appSettings>
 
-	<!-- Handlers for MVC view blocking -->
-	<system.webServer>
-		<handlers>
-			<remove name="BlockViewHandler" />
-			<add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode"
-				 type="System.Web.HttpNotFoundHandler" />
-		</handlers>
-	</system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Web.Infrastructure" publicKeyToken="31BF3856AD364E35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 
-	<!-- Assembly binding redirects -->
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31BF3856AD364E35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
-			</dependentAssembly>
-			<dependentAssembly>
-				<assemblyIdentity name="Microsoft.Web.Infrastructure" publicKeyToken="31BF3856AD364E35" culture="neutral" />
-				<bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
+  <system.web>
+    <compilation debug="true" targetFramework="4.7.2" />
+    <httpRuntime targetFramework="4.7.2" />
+  </system.web>
 
-	<!-- ASP.NET settings -->
-	<system.web>
-		<compilation debug="true" targetFramework="4.7.2" />
-		<httpRuntime targetFramework="4.7.2" />
-	</system.web>
+  <!-- DO NOT re-add <system.webServer> unless needed -->
 
-	<!-- Entity Framework provider configuration -->
-	<entityFramework>
-		<defaultConnectionFactory
-			type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-			<parameters>
-				<parameter value="v12.0" />
-			</parameters>
-		</defaultConnectionFactory>
-		<providers>
-			<provider invariantName="System.Data.SqlClient"
-					  type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-		</providers>
-	</entityFramework>
+  <entityFramework>
+    <defaultConnectionFactory
+      type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="v12.0" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 
-	<!-- **Only one** connectionStrings section below -->
-	<connectionStrings>
-		<add name="SpiceMarketContext"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SpiceMarketDB;Integrated Security=True"
-			 providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="SpiceMarketContext"
+         connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SpiceMarketDB;Integrated Security=True"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
