--- a/SpiceMarket_Web.Domain/SpiceMarket_Web.Domain.csproj
+++ b/SpiceMarket_Web.Domain/SpiceMarket_Web.Domain.csproj
@@ -83,6 +83,10 @@
     <Compile Include="Migrations\202506200909583_UpdateDatabaseSchema1.Designer.cs">
       <DependentUpon>202506200909583_UpdateDatabaseSchema1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202506201039053_UpdateDatabaseSchema2.cs" />
+    <Compile Include="Migrations\202506201039053_UpdateDatabaseSchema2.Designer.cs">
+      <DependentUpon>202506201039053_UpdateDatabaseSchema2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\CartItem.cs" />
     <Compile Include="Models\Produs.cs" />
@@ -121,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202506200909583_UpdateDatabaseSchema1.resx">
       <DependentUpon>202506200909583_UpdateDatabaseSchema1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202506201039053_UpdateDatabaseSchema2.resx">
+      <DependentUpon>202506201039053_UpdateDatabaseSchema2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
